--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,13 @@
         "src": "/(.*)",
         "dest": "/index.html"
       }
-    ]
+    ],
+    
+      "rewrites": [
+        { "source": "/(.*)", "destination": "/index.html" }
+      ]
+    
+    
   }
   
   
